syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "googleapis/google/api/annotations.proto";

option go_package = "./AirplaneService/internal/entity";

// Message definition for Airplane
message Airplane {
  int64 id = 1;
  int32 manufacturer_id = 2;
  int32 manufacturer_year = 3;
  int32 first_slot_capacity = 4;
  int32 economy_slot_capacity = 5;
  int32 country_origin_id = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}

// Request message for GetAirplane
message GetAirplaneRequest {
  int64 id = 1;
}

// Request message for CreateAirplane
message CreateAirplaneRequest {
  Airplane airplane = 1;
}

// Request message for UpdateAirplane
message UpdateAirplaneRequest {
  Airplane airplane = 1;
}

// Request message for DeleteAirplane
message DeleteAirplaneRequest {
  int64 id = 1;
}

// Response message for ListAirplanes
message ListAirplanesResponse {
  repeated Airplane airplanes = 1;
}

// Airplane service definition
service AirplaneService {
  rpc GetAirplane(GetAirplaneRequest) returns (Airplane) {
    option (google.api.http) = {
      get: "/airplanes/{id}"
    };
  }

  rpc CreateAirplane(CreateAirplaneRequest) returns (Airplane) {
    option (google.api.http) = {
      post: "/airplanes"
      body: "airplane"
    };
  }

  rpc UpdateAirplane(UpdateAirplaneRequest) returns (Airplane) {
    option (google.api.http) = {
      put: "/airplanes"
      body: "airplane"
    };
  }

  rpc DeleteAirplane(DeleteAirplaneRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
      delete: "/airplanes/{id}"
    };
  }

  rpc ListAirplanes(google.protobuf.Empty) returns (ListAirplanesResponse) {
    option (google.api.http) = {
      get: "/airplanes"
    };
  }
}
